# ESWT-Digital-Twin

./: .gitignore  CLAUDE.md  prompt.md  pyproject.toml  setup.py
.serena/: project.yml
data/experimental/pressure_measurements/: README.md
docs/: ARCHITETTURA_TECNICA.md
references/Physical Considerations for In Vitro ESWT Research Design/: input.md
references/Principles of Shock Wave Therapy/: input.md
src/: __init__.py
src/core/: __init__.py  constants.py  materials.py  units.py
src/dashboard/: __init__.py  app.py
src/modules/: __init__.py
src/modules/control/: __init__.py  data_structures.py  feedback_monitor.py  gap_estimator.py  motor_log.py  pid_controller.py
src/modules/degradation/: __init__.py  efficiency.py  electrode.py  gas_absorption.py  water_chemistry.py  water_properties.py
src/modules/physics_engine/: __init__.py  cavitation.py  focusing.py  impedance.py  plasma_dynamics.py  reflector.py  shockwave.py  simulation.py
src/modules/power_electronics/: __init__.py  capacitor.py  discharge.py  energy.py  plasma_channel.py
src/simulation/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_power_electronics.py
